--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Your detailed and unique description goes here" />
+    <meta name="keywords" content="keyword1, keyword2, keyword3" />
+    <meta name="author" content="Your Name" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Your Page Title" />
+    <meta property="og:description" content="Your detailed and unique description goes here" />
+    <meta property="og:image" content="path/to/your/image.jpg" />
+    <meta property="og:url" content="https://www.yourwebsite.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://www.yourwebsite.com/" />
+    <title>Sneakers</title>
   </head>
   <body>
     <div id="root"></div>
